App Name Changed

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -21,14 +21,15 @@
             android:scaleType="fitXY"
             android:src="@drawable/auth_screens_background" />
 
-        <ImageView
-            android:layout_width="@dimen/auth_logo_width_size"
+        <com.myshopping.utils.customWidgets.MSPTextViewBold
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/auth_logo_height_size"
             android:layout_gravity="center"
             android:contentDescription="@string/app_name"
             android:scaleType="fitCenter"
-            android:src="@drawable/tutorials_eu_logo"
-            app:tint="@color/colorWhite" />
+            android:text="My Shopping"
+            android:textColor="@color/colorWhite"
+            android:textSize="36sp" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_forgot_password_activity"
@@ -37,7 +38,7 @@
             android:layout_gravity="top" />
     </FrameLayout>
 
-    <com.myshoppal.utils.customWidgets.MSPTextViewBold
+    <com.myshopping.utils.customWidgets.MSPTextViewBold
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,7 +50,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fl_header_image" />
 
-    <com.myshoppal.utils.customWidgets.MSPTextView
+    <com.myshopping.utils.customWidgets.MSPTextView
         android:id="@+id/tv_title_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -78,7 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title_description">
 
-        <com.myshoppal.utils.customWidgets.MSPEditText
+        <com.myshopping.utils.customWidgets.MSPEditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,7 +90,7 @@
             android:textSize="@dimen/et_textSize" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.myshoppal.utils.customWidgets.MSPButton
+    <com.myshopping.utils.customWidgets.MSPButton
         android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
