--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,17 +22,18 @@
             android:scaleType="fitXY"
             android:src="@drawable/auth_screens_background" />
 
-        <ImageView
-            android:layout_width="@dimen/auth_logo_width_size"
+        <com.myshopping.utils.customWidgets.MSPTextViewBold
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/auth_logo_height_size"
+            android:text="@string/app_name"
             android:layout_gravity="center"
             android:contentDescription="@string/app_name"
             android:scaleType="fitCenter"
-            android:src="@drawable/tutorials_eu_logo"
-            app:tint="@color/colorWhite" />
+            android:textColor="@color/colorWhite"
+            android:textSize="40dp" />
     </FrameLayout>
 
-    <com.myshoppal.utils.customWidgets.MSPTextViewBold
+    <com.myshopping.utils.customWidgets.MSPTextViewBold
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,7 +59,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title">
 
-        <com.myshoppal.utils.customWidgets.MSPEditText
+        <com.myshopping.utils.customWidgets.MSPEditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -83,7 +84,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/til_email">
 
-        <com.myshoppal.utils.customWidgets.MSPEditText
+        <com.myshopping.utils.customWidgets.MSPEditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -94,7 +95,7 @@
             tools:text="123456" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.myshoppal.utils.customWidgets.MSPTextView
+    <com.myshopping.utils.customWidgets.MSPTextView
         android:id="@+id/tv_forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -107,7 +108,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/til_password" />
 
-    <com.myshoppal.utils.customWidgets.MSPButton
+    <com.myshopping.utils.customWidgets.MSPButton
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -137,7 +138,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_login">
 
-        <com.myshoppal.utils.customWidgets.MSPTextView
+        <com.myshopping.utils.customWidgets.MSPTextView
             android:id="@+id/tv_don_t_have_an_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -146,7 +147,7 @@
             android:textColor="@color/colorSecondaryText"
             android:textSize="@dimen/lbl_text_view_textSize" />
 
-        <com.myshoppal.utils.customWidgets.MSPTextViewBold
+        <com.myshopping.utils.customWidgets.MSPTextViewBold
             android:id="@+id/tv_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
