--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.myshoppal.utils.customWidgets.MSPTextViewBold
+        <com.myshopping.utils.customWidgets.MSPTextViewBold
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -52,7 +52,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <com.myshoppal.utils.customWidgets.MSPEditText
+                <com.myshopping.utils.customWidgets.MSPEditText
                     android:id="@+id/et_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_first_name">
 
-                <com.myshoppal.utils.customWidgets.MSPEditText
+                <com.myshopping.utils.customWidgets.MSPEditText
                     android:id="@+id/et_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -100,7 +100,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_last_name">
 
-                <com.myshoppal.utils.customWidgets.MSPEditText
+                <com.myshopping.utils.customWidgets.MSPEditText
                     android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -124,7 +124,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_email">
 
-                <com.myshoppal.utils.customWidgets.MSPEditText
+                <com.myshopping.utils.customWidgets.MSPEditText
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -148,7 +148,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/til_password">
 
-                <com.myshoppal.utils.customWidgets.MSPEditText
+                <com.myshopping.utils.customWidgets.MSPEditText
                     android:id="@+id/et_confirm_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -175,7 +175,7 @@
                     android:layout_height="wrap_content"
                     tools:checked="false" />
 
-                <com.myshoppal.utils.customWidgets.MSPTextView
+                <com.myshopping.utils.customWidgets.MSPTextView
                     android:id="@+id/tv_terms_condition"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -185,7 +185,7 @@
                     android:textSize="@dimen/txt_terms_and_condition_textSize" />
             </LinearLayout>
 
-            <com.myshoppal.utils.customWidgets.MSPButton
+            <com.myshopping.utils.customWidgets.MSPButton
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -215,7 +215,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_register">
 
-                <com.myshoppal.utils.customWidgets.MSPTextView
+                <com.myshopping.utils.customWidgets.MSPTextView
                     android:id="@+id/tv_already_have_an_account"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -224,7 +224,7 @@
                     android:textColor="@color/colorSecondaryText"
                     android:textSize="@dimen/lbl_text_view_textSize" />
 
-                <com.myshoppal.utils.customWidgets.MSPTextViewBold
+                <com.myshopping.utils.customWidgets.MSPTextViewBold
                     android:id="@+id/tv_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
