--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -155,6 +155,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/settings_lbl_addresses_margin"
                 android:contentDescription="@string/content_description"
                 android:src="@drawable/ic_vector_chevron_right" />
 
