My Cart Activity created and added all ways for opening My Cart.

--- a/app/src/main/res/menu/dashboard_fragment_menu.xml
+++ b/app/src/main/res/menu/dashboard_fragment_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_go_to_cart"
+        android:icon="@drawable/ic_baseline_shopping_bag_24"
+        android:title="@string/action_add_product"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/dashboard_setting"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/setting"
